# xiake-island

./: .env.example  .gitignore  AGENTS.md  README.md  backend-dev.bat  backend-dev.ps1  dev.bat  dev.ps1  frontend-dev.bat  frontend-dev.ps1  pyproject.toml  一级事故补充案例.md  仓库卫生最高禁令.md  侠客岛-checkpoints归档迁出清单.md  侠客岛-仓库清理审计报告.md  侠客岛-分批清理验证日志.md  侠客岛-系统优化方案_20260329.md  写作系统全讲解.md  防爆指令.md  防钻空子.md
checkpoints/: 2026-03-17-empty-dict-serialization-fix.md
docs/: ADR-001-主编排器与模块边界.md  侠客岛介绍.md  侠客岛系统总纲评审记录_20260313.md  侠客岛系统设计图纸_20260313.md  侠客岛首阶段施工图纸_20260313.md
docs/checkpoints/: V2能力接线_batch-B-0_checkpoint.md  V2能力接线_batch-B-1_checkpoint.md  V2能力接线_batch-B-2_checkpoint.md  V2能力接线_batch-B-3_checkpoint.md  V2能力接线_batch-B-4_checkpoint.md  V2能力接线_batch-B-5_checkpoint.md  phase6_dryrun_test.py  三系统解耦_2A-CLOSURE_report_20260316.md  三系统解耦_2B-CLOSURE_report_20260316.md  (+32 more)
frontend/: README.md  package-lock.json  package.json  vite.config.ts
scripts/: benchmark_runner.ps1  beta-check.bat  beta-start.bat  beta-stop.bat  test_custom_review.py  test_upload.py  validate_case_fullview.py
src/: __init__.py  assembly.py  env_utils.py  main.py  main_tailscale.py  runtime_paths.py
tests/: __init__.py  conftest.py  drill_2c4_rollback.py  smoke_test_v2_l2.py  smoke_test_v2_l3_l4.py  smoke_test_xiakedao_consumer.py  test_assembly.py  test_asset_bridge.py  test_env_utils.py  test_llm_gateway.py  test_main.py  test_openai_provider.py  test_opinion.py  test_orchestrator.py  test_provider_factory.py  test_runtime_paths.py  test_semantic_review.py  test_task_log.py
视觉草案/: 架构.html
(+763 files in other folders)
